--- a/views/perguntar.ejs
+++ b/views/perguntar.ejs
@@ -1,58 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/index.css" />
-  </head>
+<%- include ('partials/header.ejs'); %>
   <body>
-    <div class="container">
-      <div class="card">
-        <div class="card-header">
-          <h2>Realizar Perguntas</h2>
-        </div>
-        <div class="card-body">
-          <form action="">
-            <label for="title"> Titulo </label>
-            <br />
-            <input
-              type="text"
-              placeholder="Titulo"
-              name="title"
-              class="form-control"
-              id="title"
-            />
-            <label for="pergunta">Descrição</label>
-            <textarea
-              name=""
-              id="pergunta"
-              cols="30"
-              rows="10"
-              class="form-control"
-            >
-            </textarea>
-            <br />
-            <button type="submit" class="btn btn-success">
-              Enviar Pergunta
-            </button>
-          </form>
+    <main>
+        <%- include ('partials/navbar.ejs'); %>
+      <div class="container">
+        <div class="card">
+          <div class="card-header">
+            <h2>Realizar Perguntas</h2>
+          </div>
+          <div class="card-body">
+            <form action="/salvarpergunta" method="POST">
+              <label for="title"> Titulo </label>
+              <br />
+              <input
+                type="text"
+                placeholder="Titulo"
+                name="title"
+                class="form-control"
+                id="title"
+              />
+              <label for="pergunta">Descrição</label>
+              <textarea
+                name="description"
+                id="pergunta"
+                cols="30"
+                rows="10"
+                class="form-control"
+              >
+              </textarea>
+              <br />
+              <button type="submit" class="btn btn-success">
+                Enviar Pergunta
+              </button>
+            </form>
+          </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj"
-    crossorigin="anonymous"
-  ></script>
-  <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <%- include ('partials/footerScripts.ejs'); %>
 </html>
