feitura das respostas as perguntas

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
            <p><%= pergunta.description %></p>
         </div>
         <div class="card-foot">
-           <a href="" class="btn btn-primary">Responder</a>
+           <a href="/perguntar/<%= pergunta.id %>" class="btn btn-primary">Responder</a>
         </div>
    </div>
    <br/>
